# lp-foundation-assignments

./: README.md  pyproject.toml
.github/workflows/: ci.yml  ci_temp.yml
assignment_0/: README.md
life_expectancy/: .gitignore  cleaning.py  data_loader.py  region.py  region_aux_script.py
life_expectancy/.github/workflows/: ci.yml
life_expectancy/tests/: conftest.py  create_fixtures.py  test_cleaning.py  test_region.py
life_expectancy/tests/fixtures/: eu_life_expectancy_expected.csv  eu_life_expectancy_raw.tsv  eurostat_life_expect.json  eurostat_life_expect_expected.csv  pt_life_expectancy_expected.csv
